--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <a href="tel:+380441111111">+38 044 111 11 11</a>
             <a href="">онлайн-запись</a>    
         </header>
+    <main>
         <section>
             <div>
                 <p lang="en">A hair salon for men in Kyiv</p>
@@ -66,6 +67,90 @@
             </ul>
             <a href="">онлайн-запись</a>
         </section>
-        section>
+        <section>
+            <ul>
+                <li>
+                    <span>600<sup>+</sub></span>
+                    <p>Довольных клиентов в день</p>
+                </li>
+                <li>
+                    <span>50<sup>+</sub></span>
+                    <p>Наград за отличный сервис</p>
+                </li>
+                <li>
+                    <span>20<sup>+</sub></span>
+                    <p>Лучших мастеров Киева</p>
+                </li>
+                <li>
+                    <span>100<sup>+</sub></span>
+                    <p>Подарков постоянным клиентам</p>
+                </li>
+            </ul>
+            <div>
+                <p>старая традиционная школа</p>
+                <h2>Почему приходят именно к нам?</h2>
+                <p>О нас говорят только хорошее. Но лучше 1 раз увидеть и прочувствовать, чем 10 раз прочитать.</p>
+            </div>
+        </section>
+            <section>
+                <p>для настоящих ценителей атмосферы</p>
+                <h2>Наши мастера</h2>
+                <ul>
+                    <li>
+                        <img src="./images/barbershop-team/img1.jpg" width="370" height="346" alt="John">
+                        <h3 lang="en">John Smith</h3>
+                        <p lang="en">Extreme Barber</p>
+                    </li>
+                    <li>
+                        <img src="./images/barbershop-team/img2.jpg" width="370" height="346" alt="Michele">
+                        <h3 lang="en">Michele Doe</h3>
+                        <p lang="en">Extreme Barber</p>
+                    </li>
+                    <li>
+                        <img src="./images/barbershop-team/img3.jpg" width="370" height="346" alt="Alan">
+                        <h3 lang="en">Alan Black</h3>
+                        <p lang="en">Extreme Barber</p>
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <p>На латинском языке “барба” означает “борода”</p>
+                <h2>Гаперия наших работ</h2>
+                <ul>
+                    <li><img src="./images/gallery/Rectangle-25.jpg" width="270" height="360" alt=""></li>
+                    <li><img src="./images/gallery/Rectangle-26.jpg" width="270" height="360" alt=""></li>
+                    <li><img src="./images/gallery/Rectangle-27.jpg" width="270" height="360" alt=""></li>
+                    <li><img src="./images/gallery/Rectangle-28.jpg" width="270" height="360" alt=""></li>
+                </ul>
+            </section>
+        <div>
+            <section>
+                <h2>Онлайн-запись</h2>
+            </section>
+            <section>
+                <h2>Контакты</h2>
+
+                <address>
+                    <ul>
+                        <li><a href="https://goo.gl/maps/4njsJeD4dSjiNiy27" target="_blank" rel="noopener noreferrer" 
+                            >ул. Васильковая, 7А Киев, 08132</a></li>
+                        <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
+                        <li><a href="mailto:barbershop@email.com">barbershop@email.com</a></li>
+                    </ul>
+                </address>
+                <section>
+                    <p>время работы</p>
+                    <p>Ежедневно с 9:00 до 22:00</p>
+                </section>
+            </section>
+        </div>
+    </main>
+        <footer>
+            <p>&copy; Copyright 2020</p>
+            <ul>
+                <li><a href="" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+                <li><a href="" target="_blank" rel="noopener noreferrer">Youtube</a></li>
+            </ul>
+        </footer>
     </body>
 </html>
