--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
             <nav>
                 <a href="./"><img src="./images/logo.svg" alt="Logo Barberszop" /></a>
                 <ul>
-                    <li><a href="">О нас</a></li>
-                    <li><a href="">Услуги и цены</a></li>
-                    <li><a href="">Мастера</a></li>
-                    <li><a href="">Контакты</a></li>
+                    <li><a href="#about">О нас</a></li>
+                    <li><a href="#price">Услуги и цены</a></li>
+                    <li><a href="#team">Мастера</a></li>
+                    <li><a href="#contacts">Контакты</a></li>
                 </ul>
             </nav>
             <a href="tel:+380441111111">+38 044 111 11 11</a>
@@ -32,7 +32,7 @@
                 <li><a href="" target="_blank" rel="noopener noreferrer">Youtube</a></li>
             </ul>
         </section>
-        <section>
+        <section id="about">
             <ul>
                 <li><img src="./images/about/img1.jpg" width="270" height="445" alt="Barber scina brode"></li>
                 <li><img src="./images/about/img2.jpg" width="270" height="445" alt="Strzyzenie brzytwą"></li>
@@ -50,7 +50,7 @@
                 <button type="button">онлайн-запись</button>
             </div>
         </section>
-        <section>
+        <section id="price">
             <p>Проведи время в компании лучших мастеров</p>
             <h2>Услуги и цены</h2>
             <ul>
@@ -92,7 +92,7 @@
                 <p>О нас говорят только хорошее. Но лучше 1 раз увидеть и прочувствовать, чем 10 раз прочитать.</p>
             </div>
         </section>
-            <section>
+            <section id="team">
                 <p>для настоящих ценителей атмосферы</p>
                 <h2>Наши мастера</h2>
                 <ul>
@@ -127,7 +127,7 @@
             <section>
                 <h2>Онлайн-запись</h2>
             </section>
-            <section>
+            <section id="contacts">
                 <h2>Контакты</h2>
 
                 <address>
