--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </ul>
             </nav>
             <a href="tel:+380441111111">+38 044 111 11 11</a>
-            <a href="">онлайн-запись</a>    
+            <a href="#contac-form">онлайн-запись</a>    
         </header>
     <main>
         <section>
@@ -65,7 +65,7 @@
                 <li><span>Детская стрижка (до 12 лет)</span>от 300 грн.<span></span></li>
                 <li><span>Камуфлирование седины</span>от 200 грн.<span></span></li>
             </ul>
-            <a href="">онлайн-запись</a>
+            <a href="#contac-form">онлайн-запись</a>
         </section>
         <section>
             <ul>
@@ -124,7 +124,7 @@
                 </ul>
             </section>
         <div>
-            <section>
+            <section id="contac-form">
                 <h2>Онлайн-запись</h2>
             </section>
             <section id="contacts">
