--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             </section>
             <section>
                 <p>На латинском языке “барба” означает “борода”</p>
-                <h2>Гаперия наших работ</h2>
+                <h2>Галерея наших работ</h2>
                 <ul>
                     <li><img src="./images/gallery/Rectangle-25.jpg" width="270" height="360" alt=""></li>
                     <li><img src="./images/gallery/Rectangle-26.jpg" width="270" height="360" alt=""></li>
