added links, correction on the <span>

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BarberShop</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <link 
+        rel="stylesheet" 
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+        />
+    <link rel="stylesheet" href="./CSS/styles.css">
 </head>
     <body>
         <header>
@@ -70,19 +77,19 @@
         <section>
             <ul>
                 <li>
-                    <span>600<sup>+</sub></span>
+                    <span>600<sup>+</sup></span>
                     <p>Довольных клиентов в день</p>
                 </li>
                 <li>
-                    <span>50<sup>+</sub></span>
+                    <span>50<sup>+</sup></span>
                     <p>Наград за отличный сервис</p>
                 </li>
                 <li>
-                    <span>20<sup>+</sub></span>
+                    <span>20<sup>+</sup></span>
                     <p>Лучших мастеров Киева</p>
                 </li>
                 <li>
-                    <span>100<sup>+</sub></span>
+                    <span>100<sup>+</sup></span>
                     <p>Подарков постоянным клиентам</p>
                 </li>
             </ul>
