new class(html,css)

--- a/index.html
+++ b/index.html
@@ -7,25 +7,24 @@
     <title>BarberShop</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-    <link 
-        rel="stylesheet" 
-        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    <link rel="stylesheet" 
+          href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
         />
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
     <body>
         <header>
             <nav>
-                <a href="./"><img src="./images/logo.svg" alt="Logo Barberszop" /></a>
-                <ul>
-                    <li><a href="#about">О нас</a></li>
-                    <li><a href="#price">Услуги и цены</a></li>
-                    <li><a href="#team">Мастера</a></li>
-                    <li><a href="#contacts">Контакты</a></li>
+                <a class="link" href="./"><img src="./images/logo.svg" alt="Logo Barberszop" /></a>
+                <ul class="list">
+                    <li><a class="link" href="#about">О нас</a></li>
+                    <li><a class="link" href="#price">Услуги и цены</a></li>
+                    <li><a class="link" href="#team">Мастера</a></li>
+                    <li><a class="link" href="#contacts">Контакты</a></li>
                 </ul>
             </nav>
-            <a href="tel:+380441111111">+38 044 111 11 11</a>
-            <a href="#contac-form">онлайн-запись</a>    
+            <a class="link" href="tel:+380441111111">+38 044 111 11 11</a>
+            <a class="link" ref="#contac-form">онлайн-запись</a>    
         </header>
     <main>
         <section>
@@ -34,13 +33,13 @@
                 <h1 lang="en">BarberShop</h1>
                 <p>Мы эксперты в модных мужских стрижках. Работаем быстро, осторожно и со вкусом.</p>
             </div>
-            <ul>
-                <li><a href="" target="_blank" rel="noopener noreferrer">Instagram</a></li>
-                <li><a href="" target="_blank" rel="noopener noreferrer">Youtube</a></li>
+            <ul class="list">
+                <li><a class="link" href="" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+                <li><a class="link" href="" target="_blank" rel="noopener noreferrer">Youtube</a></li>
             </ul>
         </section>
         <section id="about">
-            <ul>
+            <ul class="list">
                 <li><img src="./images/about/img1.jpg" width="270" height="445" alt="Barber scina brode"></li>
                 <li><img src="./images/about/img2.jpg" width="270" height="445" alt="Strzyzenie brzytwą"></li>
             </ul>
@@ -60,22 +59,22 @@
         <section id="price">
             <p>Проведи время в компании лучших мастеров</p>
             <h2>Услуги и цены</h2>
-            <ul>
+            <ul class="list">
                 <li><span>Мужская стрижка</span>от 300 грн.<span></span></li>
                 <li><span>Стрижка бороды</span>от 200 грн.<span></span></li>
                 <li><span>Стрижка усов</span>от 200 грн.<span></span></li>
                 <li><span>Бритье опасной бритвой</span>от 200 грн.<span></span></li>
             </ul>
-            <ul>
+            <ul class="list">
                 <li><span>Cтрижка у стажера</span>от 50 грн.<span></span></li>
                 <li><span>Стрижка под насадку</span>от 200 грн.<span></span></li>
                 <li><span>Детская стрижка (до 12 лет)</span>от 300 грн.<span></span></li>
                 <li><span>Камуфлирование седины</span>от 200 грн.<span></span></li>
             </ul>
-            <a href="#contac-form">онлайн-запись</a>
+            <a class="link" href="#contac-form">онлайн-запись</a>
         </section>
         <section>
-            <ul>
+            <ul class="list">
                 <li>
                     <span>600<sup>+</sup></span>
                     <p>Довольных клиентов в день</p>
@@ -102,7 +101,7 @@
             <section id="team">
                 <p>для настоящих ценителей атмосферы</p>
                 <h2>Наши мастера</h2>
-                <ul>
+                <ul class="list">
                     <li>
                         <img src="./images/barbershop-team/img1.jpg" width="370" height="346" alt="John">
                         <h3 lang="en">John Smith</h3>
@@ -123,7 +122,7 @@
             <section>
                 <p>На латинском языке “барба” означает “борода”</p>
                 <h2>Галерея наших работ</h2>
-                <ul>
+                <ul class="list">
                     <li><img src="./images/gallery/Rectangle-25.jpg" width="270" height="360" alt=""></li>
                     <li><img src="./images/gallery/Rectangle-26.jpg" width="270" height="360" alt=""></li>
                     <li><img src="./images/gallery/Rectangle-27.jpg" width="270" height="360" alt=""></li>
@@ -137,12 +136,12 @@
             <section id="contacts">
                 <h2>Контакты</h2>
 
-                <address>
-                    <ul>
-                        <li><a href="https://goo.gl/maps/4njsJeD4dSjiNiy27" target="_blank" rel="noopener noreferrer" 
+                <address class="address">
+                    <ul class="list">
+                        <li><a class="link" href="https://goo.gl/maps/4njsJeD4dSjiNiy27" target="_blank" rel="noopener noreferrer" 
                             >ул. Васильковая, 7А Киев, 08132</a></li>
-                        <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
-                        <li><a href="mailto:barbershop@email.com">barbershop@email.com</a></li>
+                        <li><a class="link" href="tel:+380441111111">+38 044 111 11 11</a></li>
+                        <li><a class="link" href="mailto:barbershop@email.com">barbershop@email.com</a></li>
                     </ul>
                 </address>
                 <section>
@@ -154,9 +153,9 @@
     </main>
         <footer>
             <p>&copy; Copyright 2020</p>
-            <ul>
-                <li><a href="" target="_blank" rel="noopener noreferrer">Instagram</a></li>
-                <li><a href="" target="_blank" rel="noopener noreferrer">Youtube</a></li>
+            <ul class="list">
+                <li><a class="link" href="" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+                <li><a class="link" href="" target="_blank" rel="noopener noreferrer">Youtube</a></li>
             </ul>
         </footer>
     </body>
