--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
     <body>
-        <header>
+        <header class="dark-bg">
             <nav>
                 <a class="link" href="./"><img src="./images/logo.svg" alt="Logo Barberszop" /></a>
                 <ul class="list">
@@ -24,13 +24,13 @@
                 </ul>
             </nav>
             <a class="link" href="tel:+380441111111">+38 044 111 11 11</a>
-            <a class="link" ref="#contac-form">онлайн-запись</a>    
+            <a class="link btn" ref="#contac-form">онлайн-запись</a>    
         </header>
     <main>
-        <section>
+        <section class="dark-bg">
             <div>
-                <p lang="en">A hair salon for men in Kyiv</p>
-                <h1 lang="en">BarberShop</h1>
+                <p class="title-label" lang="en">A hair salon for men in Kyiv</p>
+                <h1 class="title hero-title" lang="en">BarberShop</h1>
                 <p>Мы эксперты в модных мужских стрижках. Работаем быстро, осторожно и со вкусом.</p>
             </div>
             <ul class="list">
@@ -44,8 +44,8 @@
                 <li><img src="./images/about/img2.jpg" width="270" height="445" alt="Strzyzenie brzytwą"></li>
             </ul>
             <div>
-                <p>О НАС</p>
-                <h2>Лучший Барбершоп твоего города</h2>
+                <p class="title-label">О НАС</p>
+                <h2 class="title section-title">Лучший Барбершоп твоего города</h2>
                 <p>Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.</p>
                 <p>
                     Мы команда, которая никогда не останавливается на достигнутом
@@ -53,12 +53,12 @@
                     то уже никогда не сможешь быть прежним. Мы команда, которая всегда с клиентами "на одной волне". Поэтому, мы всегда
                     готовы усовершенствовать каждого, кто к нам приходит!
                 </p>
-                <button type="button">онлайн-запись</button>
+                <button class="btn" type="button">онлайн-запись</button>
             </div>
         </section>
-        <section id="price">
-            <p>Проведи время в компании лучших мастеров</p>
-            <h2>Услуги и цены</h2>
+        <section id="price dark-bg" id="price"> 
+            <p class="title-label">Проведи время в компании лучших мастеров</p>
+            <h2 class="title section-title">Услуги и цены</h2>
             <ul class="list">
                 <li><span>Мужская стрижка</span>от 300 грн.<span></span></li>
                 <li><span>Стрижка бороды</span>от 200 грн.<span></span></li>
@@ -71,7 +71,7 @@
                 <li><span>Детская стрижка (до 12 лет)</span>от 300 грн.<span></span></li>
                 <li><span>Камуфлирование седины</span>от 200 грн.<span></span></li>
             </ul>
-            <a class="link" href="#contac-form">онлайн-запись</a>
+            <a class="link btn" href="#contac-form">онлайн-запись</a>
         </section>
         <section>
             <ul class="list">
@@ -93,35 +93,35 @@
                 </li>
             </ul>
             <div>
-                <p>старая традиционная школа</p>
-                <h2>Почему приходят именно к нам?</h2>
+                <p class="title-label">старая традиционная школа</p>
+                <h2 class="title section-title">Почему приходят именно к нам?</h2>
                 <p>О нас говорят только хорошее. Но лучше 1 раз увидеть и прочувствовать, чем 10 раз прочитать.</p>
             </div>
         </section>
             <section id="team">
-                <p>для настоящих ценителей атмосферы</p>
-                <h2>Наши мастера</h2>
+                <p class="title-label">для настоящих ценителей атмосферы</p>
+                <h2 class="title section-title">Наши мастера</h2>
                 <ul class="list">
-                    <li>
+                    <li class="team-item">
                         <img src="./images/barbershop-team/img1.jpg" width="370" height="346" alt="John">
-                        <h3 lang="en">John Smith</h3>
-                        <p lang="en">Extreme Barber</p>
+                        <h3 class="team-item-name" lang="en">John Smith</h3>
+                        <p class="team-item-position" lang="en">Extreme Barber</p>
                     </li>
-                    <li>
+                    <li class="team-item">
                         <img src="./images/barbershop-team/img2.jpg" width="370" height="346" alt="Michele">
-                        <h3 lang="en">Michele Doe</h3>
-                        <p lang="en">Extreme Barber</p>
+                        <h3 class="team-item-name" lang="en">Michele Doe</h3>
+                        <p class="team-item-position" lang="en">Extreme Barber</p>
                     </li>
-                    <li>
+                    <li class="team-item">
                         <img src="./images/barbershop-team/img3.jpg" width="370" height="346" alt="Alan">
-                        <h3 lang="en">Alan Black</h3>
-                        <p lang="en">Extreme Barber</p>
+                        <h3 class="team-item-name" lang="en">Alan Black</h3>
+                        <p class="team-item-position" lang="en">Extreme Barber</p>
                     </li>
                 </ul>
             </section>
             <section>
-                <p>На латинском языке “барба” означает “борода”</p>
-                <h2>Галерея наших работ</h2>
+                <p class="title-label">На латинском языке “барба” означает “борода”</p>
+                <h2 class="title section-title visually-hidden ">Галерея наших работ</h2>
                 <ul class="list">
                     <li><img src="./images/gallery/Rectangle-25.jpg" width="270" height="360" alt=""></li>
                     <li><img src="./images/gallery/Rectangle-26.jpg" width="270" height="360" alt=""></li>
@@ -129,12 +129,12 @@
                     <li><img src="./images/gallery/Rectangle-28.jpg" width="270" height="360" alt=""></li>
                 </ul>
             </section>
-        <div>
+        <div class="dark-bg">
             <section id="contac-form">
-                <h2>Онлайн-запись</h2>
+                <h2 class="title section-title">Онлайн-запись</h2>
             </section>
             <section id="contacts">
-                <h2>Контакты</h2>
+                <h2 class="title section-title">Контакты</h2>
 
                 <address class="address">
                     <ul class="list">
@@ -145,7 +145,7 @@
                     </ul>
                 </address>
                 <section>
-                    <p>время работы</p>
+                    <p class="title-label">время работы</p>
                     <p>Ежедневно с 9:00 до 22:00</p>
                 </section>
             </section>
