--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
                 <p>
                     Мы команда, которая никогда не останавливается на достигнутом
                     и жаждет перемен. И когда ты попадешь в руки нашего мастера,
-                    то уже никогда не сможешь быть прежним. Мы команда, которая всегда с клиентами "на одной волне". Поэтому, мы всегда
+                    то <span class="white-space"> уже никогда не сможешь быть прежним.</span> Мы команда, которая всегда с клиентами "на одной волне". Поэтому, мы всегда
                     готовы усовершенствовать каждого, кто к нам приходит!
                 </p>
                 <button class="btn" type="button">онлайн-запись</button>
             </div>
         </section>
-        <section id="price dark-bg" id="price"> 
+        <section class="price dark-bg" id="price"> 
             <p class="title-label">Проведи время в компании лучших мастеров</p>
             <h2 class="title section-title">Услуги и цены</h2>
             <ul class="list">
