--- a/index.html
+++ b/index.html
@@ -8,30 +8,40 @@
     <link rel="preconnect" href="https://fonts.gstatic.com"/>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" 
-          href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-        />
+          href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
     <link rel="stylesheet" href="./CSS/styles.css"/>
 </head>
+
     <body>
-        <header class="dark-bg">
-            <nav>
-                <a class="link" href="./"><img src="./images/logo.svg" alt="Logo Barberszop" /></a>
-                <ul class="list">
-                    <li><a class="link" href="#about">О нас</a></li>
-                    <li><a class="link" href="#price">Услуги и цены</a></li>
-                    <li><a class="link" href="#team">Мастера</a></li>
-                    <li><a class="link" href="#contacts">Контакты</a></li>
-                </ul>
-            </nav>
-            <a class="link" href="tel:+380441111111">+38 044 111 11 11</a>
-            <a class="link btn" ref="#contac-form">онлайн-запись</a>    
+    <!-- HEADER -->
+        <header class="page-header dark-bg">
+            <div class="container header-container">
+                <nav class="nav">
+                    <a class="link logo" href="./">
+                        <img src="./images/logo.svg" alt="Logo Barberszop"/>
+                    </a>
+                    <ul class="menu list">
+                        <li class="menu-item">
+                            <a class="menu-link link" href="#about">О нас</a></li>
+                        <li class="menu-item">
+                            <a class="menu-link link" href="#price">Услуги и цены</a></li>
+                        <li class="menu-item">
+                            <a class="menu-link link" href="#team">Мастера</a></li>
+                        <li class="menu-item">
+                            <a class="menu-link link" href="#contacts">Контакты</a></li>
+                    </ul>
+                </nav>
+    <!-- COMPONENTS -->
+                <a class="tel-link" href="tel:+380441111111">+38 044 111 11 11</a>
+                <a class="btn-link" ref="#contac-form">онлайн-запись</a>    
+            </div>
         </header>
-    <main>
+     <main>
         <section class="dark-bg">
             <div>
                 <p class="title-label" lang="en">A hair salon for men in Kyiv</p>
                 <h1 class="title hero-title" lang="en">BarberShop</h1>
-                <p>Мы эксперты в модных мужских стрижках. Работаем быстро, осторожно и со вкусом.</p>
+                <p class="description">Мы эксперты в модных мужских стрижках. Работаем быстро, осторожно и со вкусом.</p>
             </div>
             <ul class="list">
                 <li><a class="link" href="" target="_blank" rel="noopener noreferrer">Instagram</a></li>
@@ -44,6 +54,7 @@
                 <li><img src="./images/about/img2.jpg" width="270" height="445" alt="Strzyzenie brzytwą"></li>
             </ul>
             <div>
+                <div class="header-sidebar"></div>
                 <p class="title-label">О НАС</p>
                 <h2 class="title section-title">Лучший Барбершоп твоего города</h2>
                 <p>Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.</p>
@@ -98,37 +109,48 @@
                 <p>О нас говорят только хорошее. Но лучше 1 раз увидеть и прочувствовать, чем 10 раз прочитать.</p>
             </div>
         </section>
-            <section id="team">
-                <p class="title-label">для настоящих ценителей атмосферы</p>
-                <h2 class="title section-title">Наши мастера</h2>
-                <ul class="list">
-                    <li class="team-item">
-                        <img src="./images/barbershop-team/img1.jpg" width="370" height="346" alt="John">
-                        <h3 class="team-item-name" lang="en">John Smith</h3>
-                        <p class="team-item-position" lang="en">Extreme Barber</p>
-                    </li>
-                    <li class="team-item">
-                        <img src="./images/barbershop-team/img2.jpg" width="370" height="346" alt="Michele">
-                        <h3 class="team-item-name" lang="en">Michele Doe</h3>
-                        <p class="team-item-position" lang="en">Extreme Barber</p>
-                    </li>
-                    <li class="team-item">
-                        <img src="./images/barbershop-team/img3.jpg" width="370" height="346" alt="Alan">
-                        <h3 class="team-item-name" lang="en">Alan Black</h3>
-                        <p class="team-item-position" lang="en">Extreme Barber</p>
-                    </li>
-                </ul>
-            </section>
-            <section>
-                <p class="title-label">На латинском языке “барба” означает “борода”</p>
-                <h2 class="title section-title visually-hidden ">Галерея наших работ</h2>
-                <ul class="list">
-                    <li><img src="./images/gallery/Rectangle-25.jpg" width="270" height="360" alt=""></li>
-                    <li><img src="./images/gallery/Rectangle-26.jpg" width="270" height="360" alt=""></li>
-                    <li><img src="./images/gallery/Rectangle-27.jpg" width="270" height="360" alt=""></li>
-                    <li><img src="./images/gallery/Rectangle-28.jpg" width="270" height="360" alt=""></li>
-                </ul>
-            </section>
+
+<!-- OUR MASTERS -->
+    <section class="masters section" id="masters">
+        <div class="container">
+            <p class="suptitle suptitle-label-light">для настоящих ценителей атмосферы</p>
+            <h2 class="title masters-title title-label-light">Наши мастера</h2>
+            <ul class="masters-list list">
+                <li class="masters-list-item">
+                    <img class="masters-list-img" src="./images/barbershop-team/img1.jpg" width="370" height="346" alt="John">
+                    <div class="masters-list-content">
+                        <h3 class="masters-list-title" lang="en">John Smith</h3>
+                        <p class="masters-list-position" lang="en">Extreme Barber</p>
+                    </div>
+                 </li>
+                <li class="masters-list-item">
+                    <img class="masters-list-img" src="./images/barbershop-team/img2.jpg" width="370" height="346" alt="Michele">
+                    <div class="masters-list-content">
+                        <h3 class="masters-list-title" lang="en">Michele Doe</h3>
+                        <p class="masters-list-position" lang="en">Extreme Barber</p>
+                    </div>
+                </li>
+                <li class="masters-list-item">
+                    <img class="masters-list-img" src="./images/barbershop-team/img3.jpg" width="370" height="346" alt="Alan">
+                    <div class="masters-list-content"></div>
+                        <h3 class="masters-list-title" lang="en">Alan Black</h3>
+                        <p class="masters-list-position" lang="en">Extreme Barber</p>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+        <section>
+            <p class="title-label">На латинском языке “барба” означает “борода”</p>
+            <h2 class="title section-title visually-hidden ">Галерея наших работ</h2>
+            <ul class="list">
+                <li><img src="./images/gallery/Rectangle-25.jpg" width="270" height="360" alt=""></li>
+                <li><img src="./images/gallery/Rectangle-26.jpg" width="270" height="360" alt=""></li>
+                <li><img src="./images/gallery/Rectangle-27.jpg" width="270" height="360" alt=""></li>
+                <li><img src="./images/gallery/Rectangle-28.jpg" width="270" height="360" alt=""></li>
+            </ul>
+        </section>
         <div class="dark-bg">
             <section id="contac-form">
                 <h2 class="title section-title">Онлайн-запись</h2>
@@ -144,10 +166,12 @@
                         <li><a class="link" href="mailto:barbershop@email.com">barbershop@email.com</a></li>
                     </ul>
                 </address>
+
                 <section>
                     <p class="title-label">время работы</p>
                     <p>Ежедневно с 9:00 до 22:00</p>
                 </section>
+    
             </section>
         </div>
     </main>
@@ -157,6 +181,6 @@
                 <li><a class="link" href="" target="_blank" rel="noopener noreferrer">Instagram</a></li>
                 <li><a class="link" href="" target="_blank" rel="noopener noreferrer">Youtube</a></li>
             </ul>
-        </footer>
+        </footer> 
     </body>
 </html>
