modal-window- started

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
     <!-- HEADER -->
         <header class="page-header dark-bg">
-            <div class="container header-container">
+            <div class="container header-container section">
                 <nav class="nav">
                     <a class="link logo" href="./">
                         <img src="./images/logo.svg" alt="Logo Barberszop"/>
@@ -64,7 +64,7 @@
                     то <span class="white-space"> уже никогда не сможешь быть прежним.</span> Мы команда, которая всегда с клиентами "на одной волне". Поэтому, мы всегда
                     готовы усовершенствовать каждого, кто к нам приходит!
                 </p>
-                <button class="btn" type="button">онлайн-запись</button>
+                <button class="btn-link btn" type="button">онлайн-запись</button>
             </div>
         </section>
         <section class="price dark-bg" id="price"> 
@@ -132,7 +132,7 @@
                 </li>
                 <li class="masters-list-item">
                     <img class="masters-list-img" src="./images/barbershop-team/img3.jpg" width="370" height="346" alt="Alan">
-                    <div class="masters-list-content"></div>
+                    <div class="masters-list-content">
                         <h3 class="masters-list-title" lang="en">Alan Black</h3>
                         <p class="masters-list-position" lang="en">Extreme Barber</p>
                     </div>
@@ -182,5 +182,13 @@
                 <li><a class="link" href="" target="_blank" rel="noopener noreferrer">Youtube</a></li>
             </ul>
         </footer> 
+
+<!-- >>> MODAL WINDOW <<< -->
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="" class="close-btn"></button>
+        </div>
+    </div>
+
     </body>
 </html>
